Delta versioon 2.6.2.5
Selle Delta versiooniga tulevad kaasa järgmised parandused:
* DVK-st tulnud kirjasid ei saa kustutada